# agentx

./: .env  .gitignore  Agentx.toml.sample  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  dist-workspace.toml  old-logs.md  old-session.md  prompts.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: ci.yaml
agents/: overview.md
agents/contracts/: style.md
agents/requires/: 0001-example-requirement.md
include/train/laravel-octane-tenancy-api/: about.md
seed/train/rust-cli-infra-monolith-tool/: about.md
src/: lib.rs  main.rs
src/agentx/: app.py  cli.py  compose.py  config.py  discovery.py  gate.py  graph.py  io_files.py  main.py  prompts.py  runner.py  spec.py  state.py  teams.py  workers.py
src/app/: agentx.rs  arch.rs  archive.rs  base.rs  cli.rs  compose.rs  discovery.rs  gate.rs  index.rs  lifecycle.rs  mod.rs  orchestrator.rs  project.rs  run.rs  scaffold.rs  state.rs  ui.rs
src/app/cli/: arch.rs  base.rs  mod.rs
src/app/compose/: arch.rs  manager.rs  mod.rs  prime.rs  render.rs  work.rs
src/app/index/: arch.rs  classify.rs  create.rs  doctor.rs  info.rs  lifecycle.rs  mod.rs  setup.rs  status.rs  train.rs  util.rs
src/app/project/: arch.rs  assemble.rs  discover.rs  mod.rs  scaffold.rs
src/app/run/: arch.rs  boot.rs  create.rs  cycle.rs  discover.rs  gate.rs  mod.rs  phase.rs  prime.rs  review.rs  round.rs  track.rs  train.rs  worker.rs
src/app/state/: arch.rs  base.rs  mod.rs
src/app/ui/: arch.rs  log.rs  mod.rs  render.rs  view.rs
src/app/workers/: arch.rs  claude.rs  codex.rs  mod.rs
src/cli/: arch.rs  mod.rs  router.rs
src/config/: arch.rs  consts.rs  defaults.rs  mod.rs  model.rs  names.rs  paths.rs  prompts.rs  spec.rs  templates.rs  train.rs
src/config/base/: consts.rs  mod.rs  prompts.rs
src/config/model/: arch.rs  config.rs  context.rs  mod.rs
src/config/paths/: arch.rs  base.rs  mod.rs
src/config/spec/: arch.rs  default.rs  engine.rs  io.rs  mod.rs  parse.rs  roster.rs
src/config/train/: arch.rs  discover.rs  mod.rs  read.rs  seed.rs
src/config/worker/: arch.rs  base.rs  claude.rs  codex.rs  index.rs
src/core/: mod.rs  prelude.rs
src/core/context/: arch.rs  base.rs  mod.rs  value.rs
src/core/date/: arch.rs  base.rs  mod.rs
src/core/env/: arch.rs
src/core/error/: arch.rs  base.rs  fail.rs  mod.rs
src/core/fs/: dir.rs  file.rs  mod.rs
src/core/list/: base.rs
src/core/net/: arch.rs  request.rs
src/core/num/: arch.rs  base.rs
src/core/parse/: base.rs  toml.rs
src/core/prelude/: mod.rs
src/core/proc/: arch.rs  base.rs  mod.rs
src/core/rt/: mod.rs
src/core/str/: arch.rs  inflect.rs  mod.rs  split.rs
src/core/support/: mod.rs
src/core/term/: arch.rs  base.rs  select.rs
tests/: app.rs  config.rs  error.rs  support.rs  worker.rs
(+90 files in other folders)
