[project]
name = "agentx"
version = "0.1.0"
description = "Hierarchical multi-agent orchestrator (LangGraph + Claude Agent SDK)"
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "claude-agent-sdk>=0.1.0",
]

[project.scripts]
orchestrate = "agentx.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentx"]
