[project]
name = "agentx"
version = "0.1.0"
description = "Hierarchical multi-agent orchestrator for real code"
requires-python = ">=3.12"

dependencies = [
    "claude-agent-sdk>=0.1.0",
]

[project.scripts]
agentx = "agentx.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentx"]
